--- a/src/pages/siteNotice/siteNotice.scss
+++ b/src/pages/siteNotice/siteNotice.scss
@@ -38,7 +38,9 @@
     h2 {
       @include for-mobile {
         font-size: 2.2em;
-        background: repeating-linear-gradient(180deg, var(--text-color-top) 0px, var(--text-color-bottom) 2.9rem) text;
+        background: repeating-linear-gradient(180deg, var(--text-color-top) 0px, var(--text-color-bottom) 2.9rem);
+        background-clip: text;
+        -webkit-background-clip: text;
       }
     }
 
